--- a/app/src/main/res/layout/cardview_article_text.xml
+++ b/app/src/main/res/layout/cardview_article_text.xml
@@ -1,27 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?selectableItemBackground"
-    card_view:cardCornerRadius="@dimen/cardview_corner_radius"
-    card_view:cardElevation="@dimen/cardview_default_elevation"
-    card_view:cardUseCompatPadding="false"
-    card_view:contentPadding="@dimen/cardview_default_padding">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/headline"
-        android:layout_width="wrap_content"
+    <data>
+        <variable
+            name="viewModel"
+            type="com.github.denisura.nytseacher.ui.search.results.ArticleViewModel" />
+    </data>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:ellipsize="end"
-        android:textStyle="bold"
-        android:maxLines="4"
-        tools:text="Android Development" />
+        android:layout_margin="5dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?selectableItemBackground"
+        android:onClick="@{() -> viewModel.onArticleSelected()}"
+        card_view:cardCornerRadius="@dimen/cardview_corner_radius"
+        card_view:cardElevation="@dimen/cardview_default_elevation"
+        card_view:cardUseCompatPadding="false"
+        card_view:contentPadding="@dimen/cardview_default_padding">
 
-</android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/headline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:ellipsize="end"
+            android:maxLines="4"
+            android:text="@{viewModel.headline}"
+            android:textStyle="bold"
+            tools:text="Android Development" />
+
+    </android.support.v7.widget.CardView>
+</layout>
